adding mermaid support

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: Midnight is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
+markdown: kramdown
+kramdown:
+  syntax_highlighter: rouge
