--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ theme: jekyll-theme-midnight
 markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
