--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title:
 description: Mario's homelab documentation.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
