--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,8 @@ kramdown:
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+github:
+  is_project_page: false
+
+footer:
+  show_credits: false
