--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Security Learning Environment & Homelab
-description: A learning-focused environment for developing cybersecurity and infrastructure skills
+title: Mario Torres | Security & IT Professional
+description: Portfolio and security lab documentation showcasing hands-on cybersecurity experience and technical projects
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
